# texti

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  deny.toml  justfile  product.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/texti-app/: Cargo.toml  build.rs
crates/texti-app/src/: autoscroll.rs  commands.rs  editor_surface.rs  main.rs
crates/texti-app/ui/: app_window.slint
crates/texti-core/: Cargo.toml
crates/texti-core/src/: lib.rs
crates/texti-core/tests/: file_workflows.rs
crates/texti-editor/: Cargo.toml
crates/texti-editor/src/: lib.rs
crates/texti-fs/: Cargo.toml
crates/texti-fs/src/: lib.rs
crates/texti-model/: Cargo.toml
crates/texti-model/src/: lib.rs
crates/texti-settings/: Cargo.toml
crates/texti-settings/src/: lib.rs
crates/texti-syntax/: Cargo.toml
crates/texti-syntax/src/: lib.rs
crates/texti-syntax/src/syntaxes/: README.md
packaging/flatpak/: ai.texti.Texti.yml
packaging/linux/: Dockerfile.release  changelog  copyright  texti.desktop
scripts/: check-secrets.sh  install-dist-local.sh  package-linux-container.sh  package-linux.sh  smoke-x11.sh  verify-dist.sh
texti-svg-pack/: README.md
