[package]
name = "texti-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
texti-editor = { path = "../texti-editor" }
texti-fs = { path = "../texti-fs" }
texti-model = { path = "../texti-model" }
texti-settings = { path = "../texti-settings" }
texti-syntax = { path = "../texti-syntax" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
