[package]
name = "texti-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
ignore.workspace = true
serde.workspace = true
texti-model = { path = "../texti-model" }
thiserror.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
