[package]
name = "texti-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
texti-model = { path = "../texti-model" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
